Starting lit review

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -1,3 +1,7 @@
+% Chapter 1 notes
+% vim:fdm=marker
+
+% Problems of Jazz Analysis {{{
 \fntext{pja-1}{%
   This is not to say, of course, that there are not jazz compositions that do
   specify these minor details. These compositions are the exception, rather than
@@ -10,10 +14,6 @@
   describes other similar pieces, including the rest of Davis’s album
   \emph{Kind of Blue}, John Coltrane’s recording of “My Favorite Things,” and
   Herbie Hancock’s “Maiden Voyage.”}
-
-\fntext{pja-3}{%
-  % I don’t like this note
-  This is the tradition of the “contrafact,” to which I will return later.}
 
 \fntext{pja-3a}{%
   Fake books are collections of lead sheets which were traditionally compiled
@@ -54,3 +54,67 @@
 
 \fntext{pja-6}{%
   See, for example, \cite{gjerdingen:2007}; and \cite{sanguinetti:2012}.}
+
+%}}}
+
+% Theoretical Approaches {{{
+
+\fntext{ta-1}{%
+  \cite{larson:2009}. This book makes use of much of his earlier work,
+  including \headlesscite{larson:1996}; \headlesscite{larson:1998}; and
+  \headlesscite{larson:2005}.}
+
+\fntext{ta-2}{%
+  See, for example, \cite{arthurs:2011}; \cite{heyer:2012}; and
+  \cite{mcfarland:2012}. Arthurs’s work on Mehldau is something of an outlier,
+  for reasons explained below.
+}
+
+\fntext{ta-3}{%
+  Throughout this document, the word “classical” used in this sense is used in
+  its generic sense to stand for tonal music that participates in the Western
+  art music tradition. This definition is imperfect, but is useful for
+  distinguishing the music of Bach, Mozart, Beethoven, Schumann, and Wagner
+  from that of Ellington, Basie, Parker, Monk, and Coltrane. I am not
+  implying that jazz cannot participate in the Western art music; certainly
+  at least some of it does.}
+
+\fntext{ta-4}{%
+  \cite[16--17]{martin:2011}. This work draws on earlier work of his own as
+  well as that of others, including \cite{forte:1995}; and
+  \cite{neumeyer:2009}.}
+
+\fntext{ta-5}{%
+  See \cite{mcgowan:2005}; and \headlesscite{mcgowan:2011}.}
+
+\fntext{ta-6}{%
+  \cite[76--79 and throughout]{mcgowan:2005}. The dialects are particularly
+  clear in the final tonic chords, especially in the case of the characteristic
+  tonic major-minor seventh of the blues.}
+
+\fntext{ta-7}{%
+  \Cite{mcgowan:2005}. On the distinction between “paleo-” and “neo-”
+  Riemannian analysis, see \cite{rings:paleo}.}
+
+\fntext{ta-8}{%
+  \cite{martin:1980}; see also \headlesscite{martin:1988}.}
+
+\fntext{ta-9}{%
+  % appropriate?
+  I have a suspicion that these earlier models of harmony tend reflect jazz
+  musician’s intuitive understanding because they are not interested in
+  legitimizing jazz analysis for the academy, as I suggest above. Both Strunk
+  and Martin’s articles appear in the \emph{Journal of Jazz
+  Studies}/\emph{Annual Review of Jazz Studies} (the journal was renamed in
+  1981), while more recent articles on jazz harmony have appeared in
+  theoretical journals: \emph{Music Theory Spectrum}, \emph{Journal of Music
+  Theory}, and the \emph{Dutch Journal of Music Theory}, for example. As jazz
+  research has moved from the fringes into the theoretical mainstream, I think
+  it has grown increasingly abstract and further removed from jazz practice
+  itself. As I mention above, one of the goals of the present study is to show
+  how we might narrow this gap while still approaching the music with the
+  necessary theoretical rigor.}
+
+
+
+% }}}
