--- a/ch1.tex
+++ b/ch1.tex
@@ -4,8 +4,7 @@
 \chapter{Introduction}
 
 \section{Problems of Jazz Analysis}
-\label{sec:problems-jazz-analysis}
-% {{{
+\label{sec:problems-jazz-analysis} %{{{
 
 When compared to a score by Beethoven (for example), the jazz lead sheet appears
 strikingly bare. The Beethoven score specifies nearly everything a performer
@@ -134,7 +133,8 @@ In an attempt to answer some of these problems, this dissertation presents a
 transformational model of jazz harmony. While on the surface a
 transformational model may seem abstract and far-removed from the concerns of
 performing jazz musicians, harmony in jazz fits together nicely with David
-Lewin’s famous “transformational attitude.”\footcite[159]{lewin:gmit} A jazz
+Lewin’s famous “transformational attitude.”\footcite[][159 (hereafter
+\emph{GMIT)}]{lewin:gmit} A jazz
 musician does not typically think of harmonies as a series of points in space,
 but rather as a series of “characteristic gestures” between them. Rather than
 focusing on an underlying tonality, a jazz musician often tries to “make the
@@ -187,6 +187,118 @@ transformations between harmonic objects, for example, allows the theoretical
 discourse to draw on the ways in which jazz musicians teach harmony, and can
 bring these two disparate fields somewhat closer together.
 
+% include a brief outline here?
+
 % }}}
 
 \section{Theoretical Approaches to Jazz Harmony}
+\label{sec:theoretical-approaches} %{{{
+
+Studies of jazz harmony in recent years have primarily taken the form of
+Schenkerian analyses that seek to uncover large-scale voice-leading structures
+in order to define tonality. Schenkerian analysis has proven itself to be an
+extremely useful tool for analyzing tonal music, and Steve Larson’s pioneering
+work in applying its methods to jazz has undoubtedly expanded the field of
+jazz studies and brought jazz analysis into the theoretical mainstream. While
+theorists may disagree on exactly \emph{how} we should apply these Schenkerian
+techniques, hardly anyone seems to doubt that they are the best way to examine
+tonal structures in jazz.
+
+The touchstone of this literature is Steve Larson’s \emph{Analyzing Jazz: A
+Schenkerian Approach}, which is the culmination of his work of the previous
+decades.\fn{ta-1} In this and all of his work, Larson advocates what might be
+called an “orthodox” Schenkerian approach. He treats the extended tones
+common in jazz (sevenths, ninths, elevenths, etc.) as standing in for tonic
+members at some deeper structural level.\footcite[6]{larson:2009} In doing so,
+he is following the work of Steven Strunk, whose important article on linear
+intervallic patterns in jazz also uses an orthodox
+approach.\footcite{strunk:1996} Other theorists favoring the orthodox approach
+include Daniel Arthurs, David Heyer, and Mark McFarland.\fn{ta-2}
+
+At levels close to the background, these orthodox analyses of jazz do not
+appear significantly different than analyses of classical music, and indeed
+that is part of their appeal.\fn{ta-3} Because most jazz is basically tonal
+music, these theorists are interested in showing its connection to the
+European classical tradition by using the same techniques to analyze both of
+them. This is especially important to note, since Schenkerian analysis has a
+well-known ethical component.\footcite{cook:1989} For Schenker, the
+compositions that were well-described by his theory were judged by him to be
+masterworks. % xxx citation needed...
+By showing that jazz compositions can also be understood with these
+Schenkerian techniques, the implicit conclusion is that they too should be
+judged to be masterworks. Underlying these orthodox approaches, I think, is a
+desire to legitimize a place for jazz in academic music theory.
+
+An opposing group of theorists also supports the use of Schenkerian analysis,
+but argues that it should be adapted to account for tonal features specific to
+jazz. Principal among this group is Henry Martin, who advocates for the use of
+alternative \emph{Ursätze} in jazz, including ascending or gapped
+\emph{Urlinien}, non-triadic descents, and chromatic or neighbor-note
+\emph{Urlinien}.\fn{ta-4} He argues that jazz pieces are “often influenced by
+a more African-American aesthetic that favors repetition and rhythmic
+interplay over voice-leading motion through descending linear progressions,”
+and thus we should not feel obligated to adhere to traditional Schenkerian
+techniques.\footcite[7]{martin:2011}
+
+Martin draws in part on James McGowan’s “dialects of consonance” in jazz,
+which defines different contextually stable notes of the tonic triad.\fn{ta-5}
+McGowan argues that consonance in jazz is stylistically defined, and that in
+certain styles we might hear extended tones as consonances, even though they
+would be dissonant in classical music. He lists three “principal dialects”:
+the added sixth, common in early jazz and Tin Pan Alley standards; the minor
+seventh, particular to the blues; and the major seventh, common in later jazz
+performance.\fn{ta-6} For Schenker, the background is derived from the
+consonant tonic triad; Martin is able use these stylistically determined
+definitions of consonance as support for his stylistically informed background
+structures.
+
+McGowan’s work is among the minority in recent years that does not feature a
+Schenkerian bent; in addition to his dialects of consonance, he is interested
+in applying (paleo-) Riemannian functional analysis to jazz.\fn{ta-7} Despite
+this Riemannian focus, however, he is not interested in transformational
+analysis: David Lewin’s name appears nowhere in his bibliography.
+% xxx definitely need more on bishop
+Closer to my own interests is John Bishop’s 2012 dissertation, which also
+turns to transformations and mathematical group theory to close the gap
+between jazz pedagogy and jazz theory.\footcite{bishop:2012} Bishop focuses
+primarily on the interplay of pure triads in jazz, and connects harmony to
+chord-scales via these triads.
+
+Other important non-Schenkerian models of jazz harmony are found in earlier
+works of Martin and Strunk. In his dissertation, Martin advocates a syntactic
+approach based on the circle of fifths, in which chains of decending fifths
+point towards a tonic note.\fn{ta-8} Steven Strunk’s early theory of jazz
+harmony is a layered approached that draws on the Schenkerian concept of
+analytical levels to uncover a single tonal center for a jazz
+tune.\footcite{strunk:1979} These older models tend to fall more in line with
+how jazz musicians themselves discuss harmony, and we will return to them
+below.\fn{ta-9}
+
+Given the prevalence of Schenkerian techniques in jazz analysis and its proven
+explanatory power in other tonal repertories, it is reasonable to ask why a
+different approach like transformational theory is useful or necessary. In
+order to answer this question, I would first like to problematize the
+Schenkerian focus of recent jazz analysis. Steve Larson’s “Schenkerian
+Analysis of Modern Jazz: Questions about Method” will serve as a useful foil;
+it is one of the fundamental articles in the field, and its titular questions
+will help to guide the discussion here.
+
+In the article, Larson asks three main questions we must answer if we are to
+take seriously the suggestion that such Schenkerian analysis is appropriate
+for jazz:
+
+\begin{enumerate}
+  \singlespacing
+  \item Is it appropriate to apply to improvised music a method of analysis
+    developed for the study of composed music?
+
+  \item Can features of jazz harmony (ninths, elevenths, and thirteenths) not
+    appearing in the music Schenker analyzed be accounted for by Schenkerian
+    analysis?
+
+  \item Do improvising musicians really intend to create the complex
+    structures shown in Schenkerian analysis?\footcite[210]{larson:1998}
+\end{enumerate}
+
+
+% }}}
