--- a/headers.tex
+++ b/headers.tex
@@ -132,23 +132,23 @@
 
 % scale degrees /music stuff
 \newcommand{\sd}[1]{\ensuremath{\hat{#1}}}
-\renewcommand{\flat}{{\fontspec{ScaleDegrees Times}f}}
-\renewcommand{\sharp}{{\fontspec{ScaleDegrees Times}s}}
-\newcommand{\nat}{{\fontspec{ScaleDegrees Times}n}}
+\renewcommand{\flat}{{\fontspec[Scale=MatchUppercase]{Times + Musical}f}}
+\renewcommand{\sharp}{{\fontspec[Scale=MatchUppercase]{Times + Musical}s}}
+\newcommand{\nat}{{\fontspec[Scale=MatchUppercase]{Times + Musical}n}}
 
 % kerning on these characters sucks, so define some kern lengths
-\newcommand{\fklen}{1.25pt}
-\newcommand{\sklen}{1pt}
+\newcommand{\fklen}{0.5pt}
+\newcommand{\sklen}{0.4pt}
 \newcommand{\flatkern}{\hspace{\fklen}}
 \newcommand{\sharpkern}{\hspace{\sklen}}
 
-\newcommand{\Bflat}{\mbox{B\flatkern\flat}}
-\newcommand{\Eflat}{\mbox{E\flatkern\flat}}
-\newcommand{\Aflat}{\mbox{A\flatkern\flat}}
-\newcommand{\Dflat}{\mbox{D\flatkern\flat}}
-\newcommand{\Gflat}{\mbox{G\flatkern\flat}}
-\newcommand{\Cflat}{\mbox{C\flatkern\flat}}
-\newcommand{\Fflat}{\mbox{F\flatkern\flat}}
+\newcommand{\Bflat}{\mbox{B\flatkern\flat\sharpkern}}
+\newcommand{\Eflat}{\mbox{E\flatkern\flat\sharpkern}}
+\newcommand{\Aflat}{\mbox{A\flatkern\flat\sharpkern}}
+\newcommand{\Dflat}{\mbox{D\flatkern\flat\sharpkern}}
+\newcommand{\Gflat}{\mbox{G\flatkern\flat\sharpkern}}
+\newcommand{\Cflat}{\mbox{C\flatkern\flat\sharpkern}}
+\newcommand{\Fflat}{\mbox{F\flatkern\flat\sharpkern}}
 
 % Define a new command, \h, that prints a harmony.
 % It substitutes all 's' chars with sharps, and all 'b' chars with flats.
