Finish jazz lit (polemicizin')

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -115,6 +115,50 @@
   how we might narrow this gap while still approaching the music with the
   necessary theoretical rigor.}
 
+\fntext{ta-10}{%
+  This article appears with only slight changes as the second chapter of
+  Larson’s book, \headlesscite{larson:2009}.  Garrett Michaelsen critiques
+  Schenkerian analysis in similar ways in his dissertation,
+  \headlesscite[7--11]{michaelsen:2013}.}
 
+\fntext{ta-11}{%
+  In the opening of \emph{Free Composition}, Schenker refers to improvisation
+  as “the ability in which all creativity begins”; \headlesscite{schenker:fc}.
+  Schenker’s first \emph{Erlauterungsausgabe} (explanatory edition) was indeed
+  of an improvisatory work, Bach’s \emph{Chromatic Fantasy and Fugue};
+  \headlesscite{schenker:fantasy}.
+}
+
+\fntext{ta-12}{%
+  The interview was recorded on November 6, 1978. The program is available
+  online at
+  \url{http://www.npr.org/2010/10/08/92185496/bill-evans-on-piano-jazz}, and
+  was released on CD under Evans’s name as well: \emph{Marian McPartland’s
+  “Piano Jazz” Radio Broadcast} (The Jazz Alliance TJA-12038-2, 1993).}
+
+\fntext{ta-13}{%
+  Brad Mehldau, who is the focus of Daniel Arthurs’s work, is quite similar to
+  Evans, in that he is a classically-trained white pianist with a strong
+  acknowledged influence of the European classical tradition.}
+
+\fntext{ta-14}{%
+  Bill Evans made his first recordings as a leader in 1958, but he was not
+  widely known until his appearance on Miles Davis’s \emph{Kind of Blue} in
+  1959.  Shortly after he left Davis, he won wide acclaim with his trio with
+  Scott LaFaro and Paul Motian, whose groundbreaking first album was
+  \emph{Portrait in Jazz}, released in 1960.}
+
+\fntext{ta-15}{%
+  In particular, value systems that do not come from the European classical
+  tradition. Michaelsen, drawing on George Lewis’s distinction between
+  “Afrological” and “Eurological” modes of improvising, suggests that
+  Schenkerian analysis is a particularly Eurological method of analysis; his
+  own theory is designed to address interaction in improvisation, which is a
+  more Afrological value. See \headlesscite[4--5, 11--12]{michaelsen:2013}.
+  Lewis first introduces the terms in \headlesscite{lewis:1996}.}
+
+\fntext{ta-16}{%
+  \cite[241]{larson:1998}. Though there are many published analyses of “Giant
+  Steps,” I am unaware of any that use Schenkerian methods.}
 
 % }}}
