--- a/diss.bib
+++ b/diss.bib
@@ -361,6 +361,18 @@ Theory} }
   year        = {\mkbibbrackets{1987} 2007}
 }
 
+@article{lewis:1996,
+  author      = {Lewis, George},
+  title       = {Improvised Music after 1950: Afrological and Eurological
+                Perspectives},
+  journal     = {Black Music Research Journal},
+  volume      = {16},
+  number      = {1},
+  pages       = {91--122},
+  year        = {1996},
+  issue       = {Spring}
+}
+
 @article{love:2009,
   author      = {Love, Stefan},
   title       = {A Model of Common-Tone Connections Among Jazz Scales},
@@ -451,6 +463,7 @@ Theory} }
   author      = {Michaelsen, Garrett},
   title       = {Analyzing Musical Interaction in Jazz Improvisations of the
                 1960s},
+  shorttitle  = {Analyzing Musical Interaction},
   school      = {Indiana University},
   month       = {July},
   year        = {2013}
@@ -540,6 +553,26 @@ Theory} }
   volume      = {13},
   pages       = {13--25},
   year        = {2003}
+}
+
+@book{schenker:fantasy,
+  author      = {Schenker, Heinrich},
+  title       = {J.S. Bach's Chromatic Fantasy and Fugue},
+  subtitle    = {Critical Edition with Commentary},
+  address     = {New York},
+  publisher   = {Schirmer},
+  year        = {\mkbibbrackets{1909} 1984},
+  translator  = {Siegel, Hedi}
+}
+
+@book{schenker:fc,
+  author      = {Schenker, Heinrich},
+  editor      = {Oster, Ernst},
+  title       = {Free Composition \mkbibbrackets{Der freie Satz}},
+  address     = {New York},
+  publisher   = {Longman},
+  year        = {\mkbibbrackets{1935} 1979},
+  translator  = {Oster, Ernst}
 }
 
 @article{straus:2003,
