--- a/ch1.tex
+++ b/ch1.tex
@@ -281,7 +281,7 @@ order to answer this question, I would first like to problematize the
 Schenkerian focus of recent jazz analysis. Steve Larson’s “Schenkerian
 Analysis of Modern Jazz: Questions about Method” will serve as a useful foil;
 it is one of the fundamental articles in the field, and its titular questions
-will help to guide the discussion here.
+will help to guide the discussion here.\fn{ta-10}
 
 In the article, Larson asks three main questions we must answer if we are to
 take seriously the suggestion that such Schenkerian analysis is appropriate
@@ -291,14 +291,131 @@ for jazz:
   \singlespacing
   \item Is it appropriate to apply to improvised music a method of analysis
     developed for the study of composed music?
-
   \item Can features of jazz harmony (ninths, elevenths, and thirteenths) not
     appearing in the music Schenker analyzed be accounted for by Schenkerian
     analysis?
-
   \item Do improvising musicians really intend to create the complex
     structures shown in Schenkerian analysis?\footcite[210]{larson:1998}
 \end{enumerate}
 
+Larson’s answer to the first question is yes. Many of Schenker’s own methods
+were of course developed for improvisatory music, and even if they had not
+been, they have proven to be explanatory for such music.\fn{ta-11} I agree
+with Larson on this point, and don’t have anything in particular to add.
+Certainly we should not expect that our theories can only prove useful for the
+music for which they are designed; in fact as theorists we generally hope that
+the opposite is true, and that our theories have broader applications than
+originally imagined!
+
+The second question has generated much more discussion in the literature
+regarding exactly how we might apply Schenkerian methods to jazz, already
+discussed above. While this discussion is mostly one of the mechanics of
+analysis, it raises another point in which I am interested: is a jazz
+musician’s conception of musical space, or musical structure, the same as a
+classical musician’s? The orthodox Schenkerians argue that it is not, and that
+jazz is a fundamentally triadic music (since at some deep structural level all
+of the extended tones are reduced away). Those that favor a modified approach
+disagree with this characterization, but still agree that Schenkerian analysis
+is the best way to understand jazz harmony. My own reactions to this question
+overlap with my answer to Larson’s third question, so I will return to it
+shortly.
+
+Larson’s third question regards compositional or improvisational intent. The
+argument is perhaps obvious: because Schenkerian analysis depends on
+uncovering long-range voice-leading plans, how could improvising musicians
+possibly hold such plans in their memory while playing? At some level, we
+might not even be interested in the answer to this question. Schenkerian
+analysis has proven explanatory, after all, for music that was composed
+indisputably without Schenkerian methods in mind (music written before
+Schenker’s birth). Nevertheless, Larson spends a great deal of time addressing
+this particular point, so we should see to it here as well.
+
+After dismissing the possible intentional fallacy of this question, Larson
+turns to pianist Bill Evans as an example of how a jazz musician could produce
+complicated long-range voice-leading patterns while improvising. To do so, he
+relies heavily on an interview that Bill Evans gave on Marian McPartland’s
+radio program, \emph{Piano Jazz}.\fn{ta-12} Evans discusses how he always has
+a basic structure in mind while playing:
+\begin{quote}
+  \singlespacing
+  McPartland: Well, when you say structure, you mean like, one chorus in a
+  certain style, another\ldots
+
+  Evans: No, I’m talking about the abstract, architectural thing, like the
+  theoretical thing.\footcite[219]{larson:1998}
+\end{quote}
+Evans goes on to demonstrate how he has certain structural features in mind
+(harmonic and melodic arrivals). Larson then shows how Evans’s accompanying
+commentary can be understood as explaining  voice-leading events like
+prolongation and linear progressions, and provides voice-leading analyses of
+his playing.\footcite[See especially the table in][229]{larson:1998}.
+
+I think that Larson’s use of Schenker’s methods to analyze the music of Bill
+Evans is well justified, but I am less sure of the extent to which they are
+applicable to jazz more generally. Larson anticipates this objection, noting
+that it might be offered on two grounds: “first, that Evans was unusually
+talented as an improvisor; and second, that his way of thinking was radicially
+different from that of other jazz musicians.”\footcite[239]{larson:1998}
+Certainly Evans was not a typical jazz musician: he was white, and studied at
+the Mannes College of Music, then and now a cradle of Schenkerian activity in
+this country.\fn{ta-13} Larson suggests that Evans’s was such an influential pianist
+that his Schenkerian improvisational tendencies might have influenced other
+musicians with whom he played. While this may be true, Evans was probably
+not seen as influential until after 1960, and this study is concerned
+primarily with music before that time (or at least, with musicians whose style
+was well established by that time).\fn{ta-14}
+
+Larson allows that the first objection is justified: “That Evans was an
+unusually talented improvisor---and that Schenkerian analysis can show
+this---is a principle argument of this article.”\footcite[239]{larson:1998}
+This statement is representative of the legitimizing enterprise of the
+application of Schenker’s methods to jazz discussed above. It also contains a
+dangerous implication, made explicit in Larson’s closing paragraphs:
+\begin{quotation}
+  \singlespacing
+  Much jazz improvisation lacks the relationships that reward long-range
+  hearing, and consists, as Hodeir observes, of “disconnected bits of
+  nonsense.” \ldots{}But the fact that jazz musicians often say that “a jazz
+  improvisation should tell a story” suggests that many jazz musicians are
+  concerned with creating and experiencing global relationships. That they do
+  not always achieve this goal in performance is not surprising---the task is
+  difficult. But there are exceptions.
+
+  Is Schenkerian analysis applicable only to jazz performances that are
+  exceptions? No, Schenkerian analysis may be applied to any jazz
+  performance---and it may show the shortcomings of that
+  performance.\footcite[240--41]{larson:1998}
+\end{quotation}
+
+Far from “retaining Schenker’s methods but not his epistemology, his specific
+insights into music but not the system of beliefs that supported them” (as
+Nicholas Cook suggests that modern Schenkerians often do), Larson seems to be
+using Schenkerian analysis to judge certain performances as “masterworks” and
+others as inferior, much in the way done by Schenker
+himself.\footcite[439]{cook:1989} Performances by musicians who do not share
+Evans’s interest in the “abstract, architectural thing” may well be excellent
+performances when judged by other value systems.\fn{ta-15}
+
+Whether or not jazz musicians are thinking in a Schenkerian manner is not
+really the point, however. As Steven Rings puts it in the introduction to his
+book, “any analytical act will \ldots\ leave a surplus---a vast, unruly realm
+of musical experience that eludes the grasp of [a] single analytical model.
+Corners of that vast realm may nevertheless be illuminated via other
+analytical approaches, but those approaches will leave their own surpluses.
+And so on.”\footcite[5]{rings:2011} Schenkerian analysis typically focuses on
+long-range voice leading in order to reveal an underlying diatonic framework,
+while deemphasizing (some would say reducing) sufrace details, including much
+harmonic chromaticism.
+
+This focus on harmony as a first-class object is something that is at the
+heart of much jazz pedagogical material, and might constitute a different set
+of analytical values by which we can understand jazz. Rather than having to
+consign musicians who we cannot understand with Schenkerian analysis to a
+second tier of appreciation, we can instead try to understand them on
+something of their own terms. A Schenkerian analysis of Coltrane’s “Giant
+Steps” solo might reveal that it is “lacking an artistically convincing
+relationship among structural levels,” it would likely be difficult to find a
+jazz musician who did not hold it up as an example of Coltrane’s supreme
+artistry.\fn{ta-16}
 
 % }}}
