Fiddling with quoting settings

--- a/ch1.tex
+++ b/ch1.tex
@@ -336,14 +336,15 @@ complicated long-range voice-leading patterns while improvising. To do so, he
 relies heavily on an interview that Bill Evans gave on Marian McPartland’s
 radio program, \emph{Piano Jazz}.\fn{ta-12} Evans discusses how he always has
 a basic structure in mind while playing:
-\begin{quote}
+\begin{quoting}
   \singlespacing
   McPartland: Well, when you say structure, you mean like, one chorus in a
   certain style, another\ldots
 
+  \vspace{\baselineskip} \noindent
   Evans: No, I’m talking about the abstract, architectural thing, like the
   theoretical thing.\footcite[219]{larson:1998}
-\end{quote}
+\end{quoting}
 Evans goes on to demonstrate how he has certain structural features in mind
 (harmonic and melodic arrivals). Larson then shows how Evans’s accompanying
 commentary can be understood as explaining  voice-leading events like
@@ -371,11 +372,11 @@ this---is a principle argument of this article.”\footcite[239]{larson:1998}
 This statement is representative of the legitimizing enterprise of the
 application of Schenker’s methods to jazz discussed above. It also contains a
 dangerous implication, made explicit in Larson’s closing paragraphs:
-\begin{quotation}
+\begin{quoting}
   \singlespacing
   Much jazz improvisation lacks the relationships that reward long-range
   hearing, and consists, as Hodeir observes, of “disconnected bits of
-  nonsense.” \ldots{}But the fact that jazz musicians often say that “a jazz
+  nonsense.” \ldots\ But the fact that jazz musicians often say that “a jazz
   improvisation should tell a story” suggests that many jazz musicians are
   concerned with creating and experiencing global relationships. That they do
   not always achieve this goal in performance is not surprising---the task is
@@ -385,7 +386,7 @@ dangerous implication, made explicit in Larson’s closing paragraphs:
   exceptions? No, Schenkerian analysis may be applied to any jazz
   performance---and it may show the shortcomings of that
   performance.\footcite[240--41]{larson:1998}
-\end{quotation}
+\end{quoting}
 
 Far from “retaining Schenker’s methods but not his epistemology, his specific
 insights into music but not the system of beliefs that supported them” (as
@@ -394,7 +395,11 @@ using Schenkerian analysis to judge certain performances as “masterworks” an
 others as inferior, much in the way done by Schenker
 himself.\footcite[439]{cook:1989} Performances by musicians who do not share
 Evans’s interest in the “abstract, architectural thing” may well be excellent
-performances when judged by other value systems.\fn{ta-15}
+performances when judged by other value systems.\fn{ta-15}  Furthermore,
+Schenkerian analyses of jazz often focus on what turns out to be the least
+interesting part of a jazz piece. Jazz is essentially tonal music, so it is
+not at all surprising (to me, at least) that it is often possible to uncover
+an \emph{Ursatz} from a particular performance.
 
 Whether or not jazz musicians are thinking in a Schenkerian manner is not
 really the point, however. As Steven Rings puts it in the introduction to his
@@ -408,14 +413,14 @@ while deemphasizing (some would say reducing) sufrace details, including much
 harmonic chromaticism.
 
 This focus on harmony as a first-class object is something that is at the
-heart of much jazz pedagogical material, and might constitute a different set
-of analytical values by which we can understand jazz. Rather than having to
-consign musicians who we cannot understand with Schenkerian analysis to a
+heart of much jazz pedagogical material, and might help constitute a different
+set of analytical values by which we can understand jazz. Rather than having
+to consign musicians who we cannot understand with Schenkerian analysis to a
 second tier of appreciation, we can instead try to understand them on
 something of their own terms. A Schenkerian analysis of Coltrane’s “Giant
 Steps” solo might reveal that it is “lacking an artistically convincing
-relationship among structural levels,” it would likely be difficult to find a
-jazz musician who did not hold it up as an example of Coltrane’s supreme
+relationship among structural levels,” but it would likely be difficult to
+find a jazz musician who did not hold it up as an example of Coltrane’s
 artistry.\fn{ta-16}
 
 % }}}
