Starting transformational lit review.
(Really rough; needs a lot of editing.)

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -162,3 +162,17 @@
   Steps,” I am unaware of any that use Schenkerian methods.}
 
 % }}}
+
+% Transformational Theory {{{
+
+\fntext{tt-1}{%
+  One of the main subjects of Ring’s book is a GIS that describes “heard scale
+degrees,” and does not include harmony at all; see \headlesscite[41--99, and
+throughout]{rings:2011}.}
+
+\fntext{tt-2}{%
+  As evidenced in part by the number of books published in the last several
+  years; in addition to Rings, there is \cite{cohn:2012}; and
+  \cite{tymoczko:2011}.}
+
+% }}}
