--- a/ch1.tex
+++ b/ch1.tex
@@ -424,3 +424,51 @@ find a jazz musician who did not hold it up as an example of Coltrane’s
 artistry.\fn{ta-16}
 
 % }}}
+
+\section{Transformational Theory}
+\label{sec:transformational-theory} %{{{
+
+Given the current dominance of Schenkerian theory in the jazz harmonic
+landscape, we might ask what transformational thinking brings to the table.
+Transformational theory in recent years has focused on neo-Riemannian
+analysis, with particular emphasis on efficient voice leading and
+non-functional, chromatic progressions. Steven Rings has written that this
+focus on neo-Riemannian theory has “led to a view that some works are divvied
+up into some music that is tonal \ldots\ and some that is transformational.”
+Continuing, he argues that to do so “is to misconstrue the word
+transformational, treating it as a predicate for a certain kind of music,
+rather than as a predicate for a certain style of analytical and theoretical
+thought.”\footcite[9]{rings:2011} As he is right to point out, there is
+nothing about transformational theory that necessitates its restriction to
+this locally chromatic music; his book uses the theory to explain, as he says,
+“specifically \emph{tonal} aspects of tonal music.” It is this meaning of
+“transformational” that I wish to bring to bear on jazz, which is essentially
+tonal music.
+
+Fundamental to the Schenkerian approach is the relatively equal balance of
+harmony and voice leading, as mentioned above; for jazz musicians, though,
+this balance is heavily weighted toward the harmonic.  Schenkerian analysis
+tends to deemphasize certain harmonies with the aim of exposing an underlying
+diatonic framework. This goal is in contrast with the typical goal of a
+performing jazz musician, for whom individual chords have first-class status.
+
+Transformational theory too, often treats harmonies as first-class objects,
+and thus makes it especially appropriate for analyzing jazz. “Often,” only
+because transformational theory can be used for more than simply examining
+harmony: Lewin’s Generalized Interval Systems (explained in detail below) only
+require a set of elements, a group of intervals, and a function mapping pairs
+of elements of the set into the group of intervals.\footcite[26]{lewin:gmit}
+Most commonly the elements of the set are harmonies, but they do not have to
+be.\fn{tt-1}
+
+Mathematical music theories have become especially widespread in recent
+years.\fn{tt-2} Many of these models focus on only on triads; while these
+models are valuable, nearly all chords in jazz are seventh chords (at least).
+Because the neo-Riemannian literature is relatively well-known, it will be
+useful here to limit our focus to those theories that deal in some way with
+non-triadic music. This work falls basically into two categories: work
+that deals exclusively with a single type of chord, and work that deals with
+musical objects of different types.
+
+
+%}}}
