Add review for transformational stuff.
Again, this is pretty incomplete, but it will work as a placeholder so
that we can move on to more interesting topics.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -175,4 +175,35 @@ throughout]{rings:2011}.}
   years; in addition to Rings, there is \cite{cohn:2012}; and
   \cite{tymoczko:2011}.}
 
+\fntext{tt-3}{%
+  \Cite{gollin:1998}. Because the terms are in common use in the
+  transformational literature, “Tonnetz” and the plural “Tonnetze” are rendered
+  without italics throughout this study.}
+
+\fntext{tt-4}{%
+  Gollin refers to the differences between the two-dimensional triadic
+  \emph{Tonnetz} and his three-dimensional tetrachordal version as
+  “degeneracies” (\headlesscite[200]{gollin:1998}). Child’s cubic
+  representation only shows 8 of the possible 24 (0258) tetrachords: those
+  related by parsimonious voice leading to a single diminished seventh chord
+  (\headlesscite[188]{childs:1998}).}
+
+\fntext{tt-5}{%
+  \headlesscite{hook:2007}. Lewin’s definition of a transformational network is in
+  \headlesscite[193--97]{lewin:gmit}.}
+
+\fntext{tt-6}{%
+  An explanation of this four-dimensional space is found in
+  \cite[93--112]{tymoczko:2011}; much of this work is based on
+  \cite{tymoczko:2006}; and \cite{cqt:2008}. Hook points out Tymoczko’s
+  relationship to transformational theory in his review of Tymoczko’s book,
+  \textparagraph13--14.\nocite{hook:2011}%
+}
+
+\fntext{tt-7}{%
+  In particular, it will be useful to consider the ii\h{m7b5} chord (a
+  half-diminished seventh) as a different type than the V7 chord (a dominant
+  seventh) given their different functional roles in jazz harmony, despite the
+  fact that they are of the same set class.}
+
 % }}}
