--- a/ch1.tex
+++ b/ch1.tex
@@ -403,7 +403,7 @@ an \emph{Ursatz} from a particular performance.
 
 Whether or not jazz musicians are thinking in a Schenkerian manner is not
 really the point, however. As Steven Rings puts it in the introduction to his
-book, “any analytical act will \ldots\ leave a surplus---a vast, unruly realm
+book, “any analytical act will~\ldots\ leave a surplus---a vast, unruly realm
 of musical experience that eludes the grasp of [a] single analytical model.
 Corners of that vast realm may nevertheless be illuminated via other
 analytical approaches, but those approaches will leave their own surpluses.
@@ -420,7 +420,7 @@ second tier of appreciation, we can instead try to understand them on
 something of their own terms. A Schenkerian analysis of Coltrane’s “Giant
 Steps” solo might reveal that it is “lacking an artistically convincing
 relationship among structural levels,” but it would likely be difficult to
-find a jazz musician who did not hold it up as an example of Coltrane’s
+find a jazz musician who did not hold the composition up as an example of Coltrane’s
 artistry.\fn{ta-16}
 
 % }}}
@@ -463,12 +463,59 @@ be.\fn{tt-1}
 
 Mathematical music theories have become especially widespread in recent
 years.\fn{tt-2} Many of these models focus on only on triads; while these
-models are valuable, nearly all chords in jazz are seventh chords (at least).
+models are valuable, nearly all chords in jazz are (at least) seventh chords.
 Because the neo-Riemannian literature is relatively well-known, it will be
 useful here to limit our focus to those theories that deal in some way with
 non-triadic music. This work falls basically into two categories: work
 that deals exclusively with a single type of chord, and work that deals with
 musical objects of different types.
+
+Most of the studies dealing with a single type of chord are concerned with
+members of set class (0258), the half-diminished and dominant seventh chords.
+In a 1998 article, Adrian Childs develops a model for these chord types that
+is closely related to standard neo-Riemannian transformations on
+triads.\footcite{childs:1998} Edward Gollin’s article in the same issue of the
+\emph{Journal of Music Theory} explores three-dimensional Tonnetze in
+general, with special focus on the dominant and half-diminished seventh
+chords.\fn{tt-3}
+
+In general, neo-Riemannian-type operations on the (0258) tetrachords turn out
+to be somewhat less useful than their triadic counterpoints, owing to the
+symmetry of that set class.\fn{tt-4} Any one tetrachordal Tonnetz can only
+show a subset of all of the (0258) tetrachords, while the familiar triadic
+Tonnetz of course shows all 24 major and minor triads.  Recognizing this
+limitation, Jack Douthett and Peter Steinbach present a model that also
+includes minor sevenths and fully diminished seventh chords, using a digram
+they refer to as the “Power Towers.”\footcite[255--56]{douthettsteinbach:1998}
+While Douthett and Steinbach’s description accounts for two of the three main
+types of seventh chords commonly used in jazz (it is missing the crucial
+dominant seventh), all of these neo-Riemannian models focus on parsimonious
+voice leading. While this focus is valuable, it will not prove to be terribly
+useful for the functional harmony in which this study is interested.
+
+The other group of transformational models consists of what Julian Hook has
+termed “cross-type transformations”: he extends Lewin’s definition of a
+transformation network to allow for transformations between objects of
+different types.\fn{tt-5} This category of transformations contains the
+inclusion transformations discussed by both Hook and Guy Capuzzo, which map a
+triad into the unique dominant or half-diminished seventh chord that contains
+it and vice versa.\footcites{hook:2002,capuzzo:2004} Also included in this
+category are more general approaches for relating set classes of different
+cardinalities, including Joseph Straus’s formulation of atonal voice leading
+and Clifton Callender’s split and fuse
+operations.\footcites{straus:2003,callender:1998} Finally, Dmitri Tymoczko’s
+continuous tetrachordal space can accomodate \emph{all} four-note chords, but,
+as hook notes, Tymoczko downplays (and sometimes ignores) the transformational
+aspects of his geometric models.\fn{tt-6}
+
+% xxx More here, esp. on cross-type stuff
+
+Though I have mentioned these cross-type transformational works only in
+passing here, we will return to some of them in some detail below, where they
+will be more relevant. Because Hook does not strictly define what constitutes
+a “type” in a cross-type transformation, his formulation will allow us to
+apply transformational procedures rigorously in situations where we might wish
+to consider objects of different types.\fn{tt-7}
 
 
 %}}}
