--- a/diss.bib
+++ b/diss.bib
@@ -81,6 +81,7 @@ Theory} }
   author      = {Childs, Adrian P.},
   title       = {Moving Beyond Neo-Riemannian Triads},
   subtitle    = {Exploring a Transformational Model for Seventh Chords},
+  shorttitle  = {Beyond Neo-Riemannian Triads},
   journal     = {Journal of Music Theory},
   volume      = {42},
   number      = {2},
