--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -207,3 +207,27 @@ throughout]{rings:2011}.}
   fact that they are of the same set class.}
 
 % }}}
+
+% Diatonic Chord Space {{{
+
+\fntext{ds-1}{%
+  Some text here about musical spaces, probably with reference to Jay’s
+  upcoming book.}
+
+\fntext{ds-2a}{%
+  \emph{The Real Book} gives these changes in E minor, but most recorded
+  performances are in G minor. I have transposed the given changes to reflect
+  the most common performance key.}
+
+\fntext{ds-2}{%
+  In running text, dominant seventh chords are given with just a “7,” major
+  sevenths with “M7,” minor sevenths with “m7,” and half-diminished sevenths
+  with “\h{m7f5}”. In a minor key the tonic chord is typically played with a
+  major seventh, which is indicated “mM7.” In examples, chord symbols
+  typically follow conventions used by \emph{The Real Book}.}
+
+\fntext{ds-3}{%
+
+}
+
+% }}}
